Fixed bug with library panels when seen on small devices

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -319,7 +319,7 @@ header {
 }
 
 .panel-text {
-  padding: 1em 2em;
+  padding: 1.5em 2em 0.5em 2em;
 }
 
 .label {
@@ -327,6 +327,6 @@ header {
   font-size: 100%;
   font-weight: normal;
   line-height: 3;
-  padding: 0.25em 2em;
+  padding: 1em 1.5em;
   border-radius: 0em 0.2em 0.2em 0em;
 }
